unpackaged/main/default/objects/dfsle__BulkStatus__c/fields/dfsle__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>dfsle__BatchSize__c</fullName>
    <label>Batch size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>