unpackaged/main/default/objects/dfsle__BulkStatus__c/fields/dfsle__DocuSignId__c.field-meta.xml
<CustomField>
    <fullName>dfsle__DocuSignId__c</fullName>
    <externalId>true</externalId>
    <label>DocuSign batch ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>