unpackaged/main/default/objects/dfsle__BulkStatus__c/fields/dfsle__SentEnvelopes__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SentEnvelopes__c</fullName>
    <label>Sent envelopes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>