unpackaged/main/default/objects/dfsle__BulkStatus__c/fields/dfsle__Submitted__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Submitted__c</fullName>
    <label>Submitted</label>
    <type>DateTime</type>
</CustomField>